--- a/public/css/signup/mobile_responsive.css
+++ b/public/css/signup/mobile_responsive.css
@@ -74,6 +74,27 @@
         padding-left: 10px;
         font-size: 10px;
     }
+    .responsive_for_mobile input::placeholder{
+        color: var(--similargreen);
+    }
+    .color input::placeholder{
+        color: var(--lightgreen);
+    }
+    #instituteName_mobile{
+        width: 360px;
+        height: 40px;
+        margin-top: 10px;
+        background-color: var(--darkgreen);
+        border: none;
+        outline: none;
+        border-radius: 5px;
+        color: var(--similargreen);
+        padding-left: 10px;
+        font-size: 10px;
+    }
+    .color #instituteName_mobile{
+        color: var(--lightgreen);
+    }
     .color input{
         color: var(--lightgreen);
     }
@@ -146,6 +167,10 @@
         width: 250px;
         height: 30px;
     }
+    #instituteName_mobile{
+        width: 260px;
+        height: 30px;
+    }
 }
 @media screen and (max-width: 380px){
     .responsive_for_mobile{
@@ -161,6 +186,12 @@
         height: 20px;
         padding-left: 8px;
         font-size: 8px;
+    }
+    #instituteName_mobile{
+        width: 155px;
+        height: 20px;
+        font-size: 8px;
+        padding-left: 8px;
     }
     .responsive_for_mobile a{
         font-size: 8px;
