--- a/public/css/signup/style.css
+++ b/public/css/signup/style.css
@@ -223,10 +223,26 @@
     font-size: 15px;
     letter-spacing: 1px;
 }
+#instituteName{
+    padding: 0px 20px;
+    width: 450px;
+    height: 50px;
+    margin-top: 15px;
+    background-color: var(--darkgreen);
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    color: var(--similargreen);
+    font-size: 15px;
+    letter-spacing: 1px;
+}
 .stu_form_container input{
     color: var(--lightgreen)
 }
-.ins_form_container input:focus, .stu_form_container input:focus{
+.stu_form_container #instituteName{
+    color: var(--lightgreen)
+}
+.ins_form_container input:focus, .stu_form_container input:focus, .ins_form_container #instituteName:focus{
     outline: none;
 }
 .ins_form_container input::placeholder{
