--- a/public/css/login/style.css
+++ b/public/css/login/style.css
@@ -1,393 +1,308 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root{
-    --formColor:#5ECC66;
+    --col_1_light: #202924;
+    --col_2: #6BB392;
+    --col_3_medium: #021A0E;
+    --col_4: #5ECC66;
+    --col_5: #7DD0E6;
+    --col_6_dark: #0E1A14;
+    --checkbox-size: 15px;
+	--bg-color: #6BB392;
+	--checkbox-color: #0E1A14;
+	--hover-color: #7DD0E6;
+	--tick-color: #021A0E;
 }
 *{
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    list-style-type: none;
+}
+.main_container{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: #EBECF0;
 }
 .flex_container{
+    width: 620px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    background-color: #EBECF0;
+    position: relative;
+    overflow: hidden;
+    box-shadow:  41px 41px 82px #99999c, 
+                -41px -41px 82px #ffffff;
+}
+.header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: linear-gradient(147deg, #5ECC66, #7DD0E6);
+    width: 100%;
+    height: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+	-webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+	-moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
+	box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
 }
-.container{
-    width: 1580px;
-    height: 780px;
-    background-color: black;
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    -webkit-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.75);
+.logo_con{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
 }
-.mobile_container , #particles-js-mob{
-    display: none;
+.svg{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #EBECF0;
+    border-radius: 50%;
+    margin-top: 60px;
+    box-shadow:  7px 7px 14px #99999c, 
+                -7px -7px 14px #ffffff;
 }
-.container svg{
-    z-index: -1;
+.head{
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: 2px solid var(--col_5);
+    border-radius: 50%;
+    margin-bottom: 10px;
 }
-.logo{
-    position: absolute;
-    top: 20px;
-    left: 30px;
-}
-.slider .heading_text{
-    position: absolute;
-    top: 213px;
-    left: 87px;
-    font-size: 30px;
-    font-weight: 300;
-    color: #0E1A14;
-}
-/*
-.slider .subheading_text{
-    position: absolute;
-    top: 410px;
-    left: 154px;
-    font-size: 18px;
-    text-align: center;
-    font-weight: 300;
-    color: #0E1A14;
-}*/
-.slider .sign_up{
-    width: 250px;
-    height: 70px;
-    text-align: center;
-    cursor: pointer;
-    position: absolute;
-    top: 478px;
-    left: 87px;
-    line-height: 70px;
-    font-size: 18px;
-    font-weight: 300;
-    text-decoration: none;
-    color: #0E1A14;
-    background-color: #6BB392;
-    border-radius: 35px;
-    box-shadow: -2px -2px 8px rgba(107, 179, 146, 1),
-                -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 1),
-                2px 2px 8px rgba(0,0,0, 0.5);
-}
-.slider .sign_up:hover{
-    box-shadow: inset -2px -2px 8px rgba(107, 179, 146, 1),
-                inset -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 0.1),
-                inset 2px 2px 8px rgba(0,0,0, 0.5);
-}
-.slider .sign_up:hover span{
-    display: inline-block;
-    transform: scale(0.98);
-}
-.slider .s_but_one, .slider .s_but_two, .slider .s_but_three{
-    width: 27px;
-    height: 27px;
-    position: absolute;
-    top: 349px;
-    left: 30px;
-    background-color: #6BB392;
-    border-radius: 35px;
-    cursor: pointer;
-    box-shadow: -2px -2px 8px rgba(107, 179, 146, 1),
-                -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 1),
-                2px 2px 8px rgba(0,0,0, 0.5);
-}
-.slider .s_but_one:hover, .slider .s_but_two:hover, .slider .s_but_three:hover{
-    box-shadow: inset -2px -2px 8px rgba(107, 179, 146, 1),
-                inset -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 0.1),
-                inset 2px 2px 8px rgba(0,0,0, 0.5);
-}
-.slider .s_but_two, .slider .s_but_three{
-    margin-top: 37px;
-}
-.slider .s_but_three{
-    margin-top: 74px;
-}
-/*
-.slider .s_but_three{
-    margin-top: 74px;
-    box-shadow: inset -2px -2px 8px rgba(107, 179, 146, 1),
-                inset -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 0.1),
-                inset 2px 2px 8px rgba(0,0,0, 0.5);
-}
-*/
-.slider .slider_image{
-    width: 470px;
-    height: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.footer{
-    width: 486px;
-    height: 52px;
-    position: absolute;
-    top: 706px;
-    left: 30px;
-}
-.form_partical_container{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: black;
-    z-index: -1;
-}
-.form .welcome{
-    width: 450px;
-    text-align: center;
-    font-size: 50px;
-    color: var(--formColor);
-    font-weight: 900;
-    position: absolute;
-    top: 100px;
-    left: 1050px;
+.body{
+    width: 80px;
+    height: 40px;
+    border-radius: 30px;
+    background-color: transparent;
+    border: 2px solid var(--col_5);
 }
 .form{
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 500px;
+    height: 360px;
+    margin-top: 25px;
 }
-.email{
-    position: absolute;
-    top: 200px;
-    left: 1050px;
-}
-.pass{
-    position: absolute;
-    top: 300px;
-    left: 1050px;
-}
-.email label, .pass label{
-    color: var(--formColor);
-    font-size: 15px;
-    font-weight: 900;
-    position: absolute;
-    top: 35px;
-    left: 10px;
-    transition: 0.5s ease-in-out;
-}
-.email_con, .pass_con{
-    width: 450px;
-    height: 60px;
-    font-size: 20px;
-    padding-left: 10px;
-    border: none;
-    outline: none;
-    color: black;
+.form .linput{
+    width: 480px;
+    height: 45px;
+    border-radius: 30px;
+    margin-bottom: 20px;
     background-color: transparent;
-    z-index: 1;
-}
-.email_con:focus, .pass_con:focus{
-    box-shadow: none;
-    background-color: transparent;
-}
-.email .line, .pass .line{
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 2px;
-    background-color: var(--formColor);
-    transition: 0.5s ease-in-out;
-}
-.email_con:focus + label,
-.email_con:valid + label,
-.pass_con:focus + label,
-.pass_con:valid + label
-{
-    top:-20px;
-    left:0px;
-}
-.email_con:focus ~ .line,
-.email_con:valid ~ .line,
-.pass_con:focus ~ .line,
-.pass_con:valid ~ .line
-{
-    border-radius: 10px;
-    height: 60px;
-    z-index: -1;
-}
-.checkbox{
-    width: 250px;
-    height: 60px;
-    position: absolute;
-    top: 400px;
-    left: 1050px;
-}
-.checkbox label{
-    width: 22px;
-    height: 22px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-.checkbox label .text{
-    color: var(--formColor);
-    margin-left: 30px;
-    font-size: 15px;
-    font-weight: 600;
-    width: 200px;
-}
-.checkbox label .btn{
-    display: block;
-    width: 22px;
-    height: 22px;
-    background-color: #1b1b1b;
-    border-radius: 50%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    box-shadow: 0px 3px 4px rgba(0,0,0, 1),
-                inset 0px -2px 5px rgba(0,0,0, 1),
-                inset 0px 2px 2px rgba(255,255,255, 0.5);
-}
-.checkbox label input{
-    width: 22px;
-    height: 22px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    cursor: pointer;
+    border: 2px solid var(--col_5);
     outline: none;
-    border: none;
-    z-index: 1;
+    padding-left: 20px;
+    font-size: 1rem;
+    color: var(--col_6_dark);
 }
-.checkbox label input[type="checkbox"]{
-    -webkit-appearance: none;
-}
-.checkbox label .btn_circle{
-    display: block;
-    width: 8px;
-    height: 8px;
-    border: 2px solid white;
-    border-radius: 50%;
-    position: absolute;
-    top: 5px;
-    left: 5px;
-}
-.checkbox label input[type="checkbox"]:checked{
-    outline: none;
-    border: none;
-    cursor: pointer;
-}
-.checkbox label input[type="checkbox"]:checked ~ .btn_circle{
-    border: 2px solid var(--formColor);
-    box-shadow: 0 0 15px var(--formColor),
-                0 0 30px var(--formColor)
-}
-#inst{
-    position: absolute;
-    top: 32px;
-    left: 0px;
-}
-.log_in{
-    width: 450px;
-    height: 70px;
-    position: absolute;
-    top: 500px;
-    left: 1050px;
-    text-align: center;
-    cursor: pointer;
-    text-decoration: none;
-    line-height: 70px;
-    color: var(--formColor);
-    font-weight: 900;
-    overflow: hidden;
-    border: 2px solid var(--formColor);
-    border-radius: 40px;
-    transition-delay: 0.2s;
-}
-.log_in:hover{
-    color: #021A0E;
-    border: none;
-}
-.log_in::before{
-    content: '';
-    width:100%;
-    height: 100%;
-    background-image: linear-gradient(to right, #5ECC66,#6BB392);
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 40px;
-    transition: all 0.2s ease-in;
-    transform-origin: left;
-    transform: scaleX(0);
-    z-index: -1;
-}
-.log_in:hover::before{
-    transform: scaleX(1);
-}
-.form_footer{
-    width: 450px;
-    height: 70px;
-    position: absolute;
-    top: 600px;
-    left: 1050px;
-    text-align: center;
-}
-.form_footer span{
-    line-height: 70px;
-    color: white;
-    font-size: 12px;
-    font-weight: 400;
-}
-.form_footer a{
-    line-height: 70px;
-    color: var(--formColor);
-    font-size: 12px;
-    font-weight: 400;
-    text-decoration: none;
-    margin-left: 5px;
-}
-.footer .footer_text{
-    font-size: 18px;
-    font-weight: 300;
-    color: #0E1A14;
-    line-height: 52px;
-}
-.playstore, .apple{
-    width: 78px;
-    height: 52px;
-    text-align: center;
-    cursor: pointer;
-    position: absolute;
-    top: 0px;
-    left: 350px;
-    background-color: #6BB392;
-    border-radius: 35px;
-    box-shadow: -2px -2px 8px rgba(107, 179, 146, 1),
-                -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 1),
-                2px 2px 8px rgba(0,0,0, 0.5);
-}
-.playstore:hover, .apple:hover{
-    box-shadow: inset -2px -2px 8px rgba(107, 179, 146, 1),
-                inset -2px -2px 12px rgba(107, 179, 146, 0.5),
-                inset 2px 2px 4px rgba(107, 179, 146, 0.1),
-                inset 2px 2px 8px rgba(0,0,0, 0.5);
-}
-#playimg, #appleimg{
-    width: 25px;
-    height: 25px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.apple{
-    margin-left: 93px;
-}
-.tab_container{
+small{
     display: none;
-    height: 0;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    color: red;
+}
+.form input::placeholder{
+    color: var(--col_5);
+}
+/********************************** CheckBox **********************************/
+
+.form label {
+    cursor: pointer;
+	display: inline-block;
+	width: var(--checkbox-size);
+	height: var(--checkbox-size);
+	border: calc(var(--checkbox-size) * 0.125) solid var(--checkbox-color);
+	border-radius: 12.5%;
+	-webkit-transition: 400ms 100ms ease-out;
+	-o-transition: 400ms 100ms ease-out;
+	transition: 400ms 100ms ease-out;
+	margin-right: 10px;
+
+}
+
+.form label:hover {
+	border-color: var(--hover-color);
+}
+
+.form input[type="checkbox"] {
+	position: absolute;
+	left: -1000px;
+}
+
+.form .tick {
+	position: relative;
+	right: calc(var(--checkbox-size) * -0.5);
+	top: calc(var(--checkbox-size) * -0.25);
+	width: calc(var(--checkbox-size) * 0.25);
+	height: calc(var(--checkbox-size) * 0.75);
+	border-right: calc(var(--checkbox-size) * 0.25) solid var(--tick-color);
+	border-bottom: calc(var(--checkbox-size) * 0.25) solid var(--tick-color);
+	-webkit-transform: rotate(45deg) scale(0);
+	    -ms-transform: rotate(45deg) scale(0);
+	        transform: rotate(45deg) scale(0);
+	opacity: 0;
+	-webkit-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.5);
+	-o-transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.5);
+	transition: all 600ms cubic-bezier(0.175, 0.885, 0.32, 1.5);
+}
+
+.form .tick_con{
+	transform: scale(0);
+}
+
+.form .tick:before {
+	content: '';
+	position: absolute;
+	left: calc(var(--checkbox-size) * -0.125);
+	bottom: calc(var(--checkbox-size) * -0.25);
+	border: calc(var(--checkbox-size) * 0.125) solid var(--tick-color);
+	border-radius: 50%;
+}
+
+.form .tick:after {
+	content: '';
+	position: absolute;
+	right: calc(var(--checkbox-size) * -0.25);
+	top: calc(var(--checkbox-size) * -0.125);
+	border: calc(var(--checkbox-size) * 0.125) solid var(--tick-color);
+	border-radius: 50%;
+}
+
+.form input[type="checkbox"]:checked + label .tick {
+	opacity: 1;
+	-webkit-transform: rotate(45deg) scale(1);
+	    -ms-transform: rotate(45deg) scale(1);
+	        transform: rotate(45deg) scale(1);
+}
+
+.form input[type="checkbox"]:checked + label .tick_con{
+	transform: scale(1);
+}
+
+.form input[type="checkbox"]:focus + label {
+	-webkit-animation-name: cb-pop;
+	        animation-name: cb-pop;
+	-webkit-animation-duration: 400ms;
+	        animation-duration: 400ms;
+	-webkit-animation-iteration-count: 1;
+	        animation-iteration-count: 1;
+	-webkit-animation-timing-function: linear;
+	        animation-timing-function: linear;
+}
+
+@-webkit-keyframes cb-pop {
+	0% {
+		-webkit-transform: scale(1);
+		        transform: scale(1);
+	}
+	33% {
+		-webkit-transform: scale(0.9);
+		        transform: scale(0.9);
+	}
+	66% {
+		-webkit-transform: scale(1.1);
+		        transform: scale(1.1);
+	}
+	100% {
+		tranform: scale(1);
+	}
+}
+
+@keyframes cb-pop {
+	0% {
+		-webkit-transform: scale(1);
+		        transform: scale(1);
+	}
+	33% {
+		-webkit-transform: scale(0.9);
+		        transform: scale(0.9);
+	}
+	66% {
+		-webkit-transform: scale(1.1);
+		        transform: scale(1.1);
+	}
+	100% {
+		tranform: scale(1);
+	}
+}
+.cb1_con,
+.cb2_con,
+.cb3_con{
+    display: flex;
+    margin-bottom: 5px;
+}
+.cb1_con .rem_me{
+    margin-left: auto;
+    display: flex;
+}
+.rem_me_res{
+    display: none;
+}
+/********************************** Button **********************************/
+.form button{
+    width: 100%;
+    height: 45px;
+    margin-top: 15px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--col_6_dark);
+    border: 2px solid var(--col_5);
+    border-radius: 30px;
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.2s linear;
+    position: relative;
+}
+.form button:hover{
+    border: none;
+    background-color: #EBECF0;
+    box-shadow:  7px 7px 14px #99999c, 
+                -7px -7px 14px #ffffff;
+}
+.form button:active{
+    transform: scale(0.95);
+}
+/********************************** Footer **********************************/
+.form_footer p{
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+}
+.form_footer p a{
+    color: var(--col_4);
+}
+/********************************** Responsive **********************************/
+@media screen and (max-width:850px){
+    .main_container{
+        height: 120vh;
+    }
+    .flex_container{
+        width: 330px;
+        height: 730px;
+    }
+    .form{
+        width: 280px;
+        height: 380px;
+    }
+    .form .linput{
+        width: 260px;
+    }
+    .cb1_con .rem_me{
+        display: none;
+    }
+    .rem_me_res{
+        display: flex;
+        margin-bottom: 5px;
+    }
 }
