--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,86 @@
-.nav_active_item {
-  background-color: #021A0E !important;
-  color: white !important;
+.section_center {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0px;
+}
+
+.inner_page_back {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s linear;
+  background-image: linear-gradient(147deg, #54ffb1, #40d7ff);
+}
+.inner_page_back:active {
+  transform: scale(0.95);
+}
+.inner_page_back .inner_page_back_logo {
+  flex-shrink: 0;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 45px;
+  height: 45px;
+  background-color: #021A0E;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-right: 20px;
+  color: white;
+}
+.inner_page_back .inner_page_back_logo i {
+  font-size: 1.5rem;
+}
+.inner_page_back .inner_page_back_name {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.button_45 {
+  flex-shrink: 0;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 45px;
+  height: 45px;
+  background-color: #021A0E;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-right: 20px;
+  color: white;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.button_45 i {
+  font-size: 1.5rem;
+}
+.button_45:active {
+  border: none;
+  outline: none;
+  transform: scale(0.85);
 }
 
 /******************************************************Desktop Display None******************************************************/
@@ -798,7 +878,6 @@
 
 .single_news_page_container {
   width: 960px;
-  padding: 40px 0px;
 }
 .single_news_page_container .single_news_container {
   width: 100%;
@@ -885,6 +964,136 @@
   left: 0;
   bottom: 0;
   right: 0;
+}
+
+.e-meet_container {
+  width: calc(100% - 4rem);
+  padding: 6rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #eeeeee;
+  border-radius: 15px;
+  position: relative;
+}
+.e-meet_container #meeting {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 80px - 4rem - 201px);
+  display: none;
+}
+.e-meet_container .e-meet_form_container {
+  width: 300px;
+}
+.e-meet_container .e-meet_form_container .meet_joining_info {
+  padding: 1rem 0rem;
+  font-size: 1.3rem;
+  font-weight: 800;
+}
+.e-meet_container .e-meet_form_container .start_new {
+  width: 100%;
+  margin-bottom: 4rem;
+}
+.e-meet_container .e-meet_form_container .start_new .form input {
+  width: 100%;
+  padding-bottom: 0.5rem;
+  border: none;
+  border-bottom: 2px solid black;
+  font-size: 1.3rem;
+  background-color: transparent;
+  outline: none;
+}
+.e-meet_container .e-meet_form_container .start_new .form input:active, .e-meet_container .e-meet_form_container .start_new .form input:focus {
+  outline: none;
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn {
+  margin-top: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-between;
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn .sharing {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn .sharing button:first-child {
+  margin-right: 0.5rem;
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn .start button {
+  border-radius: 8px;
+  color: white;
+  width: 140px;
+  height: 45px;
+  text-align: center;
+  line-height: 45px;
+  font-weight: 700;
+  background-color: #6BB392;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: all 0.3s linear;
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn .start button:active {
+  border: none;
+  outline: none;
+  transform: scale(0.95);
+}
+.e-meet_container .e-meet_form_container .start_new .form .form_btn .start button:hover {
+  -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
+  -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
+}
+.e-meet_container .e-meet_form_container .join_meet .form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.e-meet_container .e-meet_form_container .join_meet .form input {
+  width: 100%;
+  padding-bottom: 0.5rem;
+  border: none;
+  border-bottom: 2px solid black;
+  font-size: 1.3rem;
+  background-color: transparent;
+  outline: none;
+  margin-bottom: 1rem;
+}
+.e-meet_container .e-meet_form_container .join_meet .form input:active, .e-meet_container .e-meet_form_container .join_meet .form input:focus {
+  outline: none;
+}
+.e-meet_container .e-meet_form_container .join_meet .form button {
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  color: white;
+  font-weight: 700;
+  background-color: #6BB392;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: all 0.3s linear;
+}
+.e-meet_container .e-meet_form_container .join_meet .form button:active {
+  border: none;
+  outline: none;
+  transform: scale(0.95);
+}
+.e-meet_container .e-meet_form_container .join_meet .form button:hover {
+  -webkit-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
+  -moz-box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.51);
 }
 
 .institute_list_container {
@@ -1013,6 +1222,7 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: black;
 }
 .institute_list_inner_container .institute_list_inner_center .institute_list_serial i {
   font-size: 1.4rem;
@@ -1191,7 +1401,52 @@
   color: #6BB392;
 }
 
-.section_center {
+.attendance_container {
+  width: 960px;
+  padding: 40px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  background-color: #eeeeee;
+  border-radius: 20px;
+}
+.attendance_container .attendance {
+  flex-shrink: 0;
+  width: 70%;
+}
+.attendance_container .attendance_widget {
+  width: 30%;
+}
+
+.manage_classes_admin {
+  width: 100%;
+}
+.manage_classes_admin .add_class_btn_container {
+  width: calc(100% - 20px);
+  padding: 20px;
+}
+.manage_classes_admin .add_class_btn_container .add_class_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.manage_classes_admin .add_class_btn_container .add_class_btn a {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 8px;
+  color: #5ECC66;
+  background-color: #d2f1d4;
+  font-weight: 900;
+  font-size: 1.3rem;
+}
+.manage_classes_admin .add_class_btn_container .add_class_btn a:hover {
+  color: black;
+}
+.manage_classes_admin .class_list_container {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1199,76 +1454,83 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
-
-.inner_page_back {
+.manage_classes_admin .class_list_container .classes_details {
+  width: 340px;
+  height: 150px;
+  margin: 20px;
+  padding: 20px;
+  flex-shrink: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: white;
+  -webkit-box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+  box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
+  position: relative;
+  overflow: hidden;
+}
+.manage_classes_admin .class_list_container .classes_details .greenBox {
+  padding: 10px;
+  border-radius: 7px;
+  color: #5ECC66;
+  background-color: #d2f1d4;
+  font-weight: 900;
+}
+.manage_classes_admin .class_list_container .classes_details .class_name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: space-between;
+}
+.manage_classes_admin .class_list_container .classes_details .class_name .name {
+  color: #6c757d;
+}
+.manage_classes_admin .class_list_container .classes_details .class_name .section {
+  padding: 10px 20px;
+}
+.manage_classes_admin .class_list_container .classes_details .total_students .total h1 {
+  color: #6c757d;
+}
+.manage_classes_admin .class_list_container .classes_details .class_teacher .teacher p {
+  color: #6c757d;
+}
+.manage_classes_admin .class_list_container .classes_details .view_details {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
+  height: 100%;
   align-items: center;
-  margin-bottom: 20px;
-  border-radius: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  transition: all 0.2s linear;
-  background-image: linear-gradient(147deg, #54ffb1, #40d7ff);
-}
-.inner_page_back:active {
-  transform: scale(0.95);
-}
-.inner_page_back .inner_page_back_logo {
-  flex-shrink: 0;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  width: 45px;
-  height: 45px;
-  background-color: #021A0E;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
   justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  margin-right: 20px;
+  animation-duration: 0.5s;
+}
+.manage_classes_admin .class_list_container .classes_details .view_details a {
+  display: block;
+  padding: 10px;
+  border-radius: 7px;
+  background-color: #6BB392;
   color: white;
 }
-.inner_page_back .inner_page_back_logo i {
-  font-size: 1.5rem;
-}
-.inner_page_back .inner_page_back_name {
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.button_45 {
-  flex-shrink: 0;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  width: 45px;
-  height: 45px;
-  background-color: #021A0E;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
+.manage_classes_admin .class_list_container .classes_details:hover .view_details {
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  margin-right: 20px;
-  color: white;
-  cursor: pointer;
+  animation-name: viewDetails;
 }
-.button_45 i {
-  font-size: 1.5rem;
-}
-.button_45:active {
-  transform: scale(0.85);
+@keyframes viewDetails {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
 }
 
 /******************************************************  1470 PX Responsive ******************************************************/
@@ -1613,6 +1875,19 @@
   .newsfeed_container .center_newsfeed .post_form_container .file-select label {
     width: 110px !important;
   }
+
+  /*
+  ****************
+  Manage Classes
+  ****************
+  */
+  .manage_classes_admin .class_list_container {
+    width: calc(100% - 40px);
+    padding: 0px 20px;
+  }
+  .manage_classes_admin .class_list_container .classes_details {
+    width: calc(100% - 40px);
+  }
 }
 /******************************************************  375 PX Responsive ******************************************************/
 @media screen and (max-width: 375px) {
@@ -1643,6 +1918,14 @@
     border-radius: 10px;
     overflow: hidden;
   }
+}
+.body_color_changer {
+  background-color: #FAFBFE;
+}
+
+.nav_active_item {
+  background-color: #021A0E !important;
+  color: white !important;
 }
 
 /*# sourceMappingURL=style.css.map */
